# copia-Todoist

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  popular_banco.py  pyproject.toml  requirements.txt  teste.py
animations/: animation.py
antigo/Design Patterns/: Composite.py  Factory Method.py  Singleton.py  Strategy.py  upgrads.txt
antigo/Design_Patterns/: Observer.py  padrao_state.py  teste.py
antigo/POO/: interfase.py
antigo/auxiliar/: visualizacao_arvore_componentes.py
antigo/codigo/: diferentes_animaçoes.py  gurdar.py
antigo/construcao/: card.py  hora.py  pronto.py  teste.py
antigo/construcao/calendario/: calendario_rolavel.py  calendario_rolavel_infinito.py  tkinter_calendario.py
antigo/construcao/componentes/: stack.py  stack_basico.py
antigo/construcao/teste/: click_na_tela.py  completo.py  teste_oo.py
app/: TODO.db
app/configs/: database_config.py
app/database/: operations.py  setup.py
components/: adicionar_tarefa.py  slidbar.py
controller/: app_controller.py
src/: config.py  config_repr.py  main.py  teste.py
src/app/configs/: database_config.py
src/app/database/: operations.py  setup.py
src/ui/controller/: app_controller.py  controle_card_adicionar.py
src/ui/views/: home_view.py
src/utils/: positioning.py
ui/components/: button_adicionar_tarefa.py  calendar.py  calendario.py  card_adicionar_tarefa.py  lembretes.py  mostrar_tarefas.py  prioridade.py  slidbar.py  tarefa_vencimento.py
ui/controller/: app_controller.py
ui/views/: home_view.py
views/: home_view.py
(+56 files in other folders)
